# vsWallpaper-Effect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  vswallpaper-effect
vswallpaper_effect/: config.py  gl_renderer.py  gui.py  layer_window.py  main.py  model.py  renderer.py  style.py  utils.py  wallpaper.py
vswallpaper_effect/effects/: __init__.py  aurora.py  base.py  droplets.py  gradient.py  matrix.py  rain.py  snow.py  stars.py  warp.py  waves.py
